# Weld_map_understanding_and_weld_traceability_assistant_agent

./: .gitignore  README.md  pyproject.toml
config/: agent_config.yaml  roi_template_default.json  shared_assistant_config.yaml
src/weld_traceability_agent/: __main__.py  assistant_bridge.py  bootstrap.py  cli.py  config.py  orchestrator.py  runtime_models.py  state_store.py  tools.py
src/weld_traceability_agent/llm/: __init__.py  heuristic.py  openai_responses.py
src/weld_traceability_agent/telegram/: bot.py
tests/: conftest.py  test_agent_flow.py  test_config.py  test_runtime_store.py  test_telegram_bot.py
